--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.3.2",
+    "styled-icons": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
